Dev: issue #11860: flatmodern: dynamic total/remain aligned right : align:center Dev: remove uneeded margin from core

--- a/styles-public/numeric-slider.css
+++ b/styles-public/numeric-slider.css
@@ -254,13 +254,13 @@
 .slider-list .slider-left,.slider-list .slider-right {text-align:center;}
 }
 @media (min-width: 769px) {
-.slider-list .control-label{margin-top:2em}
+.slider-list .slider-item .control-label{margin-top:2em}
 .slider-list .slider-left,.slider-list .slider-right {margin-top: 2em;}
 }
 }
  /* different line */
-.slider-list .control-label.col-sm-12{margin-top:0.5em;margin-bottom: 2em;}
-.slider-list .col-sm-12 .ls-input-group{margin-top:0.5em;margin-bottom: 2em;}
+.slider-list .slider-item .control-label.col-sm-12{margin-top:0.5em;margin-bottom: 2em;}
+.slider-list .slider-item .col-sm-12 .ls-input-group{margin-top:0.5em;margin-bottom: 2em;}
 /* reset button */
 .ls-input-group-reset{position:relative}
 .btn-slider-reset{text-align:center;top:-1em;position:relative}
